--- a/Lab100.md
+++ b/Lab100.md
@@ -1,5 +1,10 @@
 # Lab 100: Beginning with Events
 
+
+![](screenshots/18.png) 
+
+This is the part of the architecture being completed in Lab 100.
+
 ## Create the notifications topic & subscription
 
 
