--- a/Lab100.md
+++ b/Lab100.md
@@ -75,4 +75,4 @@ You can upload an object from the console by pressing the 'upload object button'
 
 You will then get a notification email like this. If you select HTTPS endpoint under notification instead of email, this JSON payload will be sent to that endpoint. 
 
-Congratulations, you have finished Lab100!
+Congratulations, you have finished Lab100! [Click here to go to Lab 200.](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab200.md)
