--- a/Lab301.md
+++ b/Lab301.md
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway. This is because my ORDS endpoint is publicly accessible, and I would like to add XXXX. 
+In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway.
 
 [Deploying a flask api on API Gateway](https://github.com/stretchcloud/OCI-APIGW-Demo-API)
 
