--- a/Lab301.md
+++ b/Lab301.md
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway.
+In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway. This is because my ORDS endpoint is publicly accessible, and I would like to add XXXX. 
 
 [Deploying a flask api on API Gateway](https://github.com/stretchcloud/OCI-APIGW-Demo-API)
 
@@ -16,21 +16,29 @@ This assumes you have placed your Gateway in a subnet with ingress rules allowin
 
 Your VCN must have an IG and a route open to it. 
 
-![](301screenshots/1.png) 
+![](301screenshots/2.png) 
 
 ## Workshop
 
-### Deploying the Gateway
 
-### Create the JSON from your API
+![](301screenshots/3.png) 
 
-https://v8uivlpip7dqhaw-ramautodb.adb.us-ashburn-1.oraclecloudapps.com/ords/apexuser/devices/Temperature
+Navigate to the API Gateway from the left console. 
 
-https://docs.cloud.oracle.com/en-us/iaas/Content/API/SDKDocs/cliupgrading.htm
-^ updage if 
-Error: No such command
 
-[Click here to see where to get your ORDS base url](https://github.com/GaryHostt/sampeIoTData)
+![](301screenshots/4.png) 
+
+When creating the gateway, put it in a public subnet. 
+
+Once your gateway is green & active, click create deployment. 
+
+
+![](301screenshots/5.png) 
+
+Name your deployment and give it a path prefix for your endpoint later, I used '/v2' in my case, because this is my newer API version. 
+
+For the JSON file you'll upload, create a .json file similar to mine below: 
+
 ```
 {
   "requestPolicies": {},
@@ -48,8 +56,32 @@ Error: No such command
 }
 ```
 
-https://c3ato4i4u5ujwyqyv5bgohbxxe.apigateway.us-ashburn-1.oci.customer-oci.com/v2/devices/Temperature
+[Click here to see where to get your ORDS base url](https://github.com/GaryHostt/sampeIoTData)
 
+Once your deployment state is active, click on it. 
+
+
+![](301screenshots/6.png) 
+
+Copy the endpoint url, it should be something like: 
+
+```
+
+https://abc1234.apigateway.us-ashburn-1.oci.customer-oci.com/v2
+
+```
+However, you will need to truncate the path from your JSON file to the end, in my case the full endpoint with the URI is:
+
+```
+https://abc1234.apigateway.us-ashburn-1.oci.customer-oci.com/v2/devices/Temperature
+```
+
+Now you can take this URL and put it in Postman. 
+
+
+![](301screenshots/7.png) 
+
+Congrats, your ORDS endpoint is now protected behind the API Gateway. 
 
 
 
