--- a/Lab301.md
+++ b/Lab301.md
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway.
+In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway because I would like to apply a rate-limiting policy. 
 
 [Deploying a flask api on API Gateway](https://github.com/stretchcloud/OCI-APIGW-Demo-API)
 
@@ -81,7 +81,33 @@ Now you can take this URL and put it in Postman.
 
 ![](301screenshots/7.png) 
 
-Congrats, your ORDS endpoint is now protected behind the API Gateway. 
+Congrats, your ORDS endpoint is now protected behind the API Gateway, but we still need to apply the rate limiting policy. 
+
+This JSON shows the syntax to limit API calls to this endpoint to 1 per second, edit your JSON file. 
+
+```
+{
+  "requestPolicies": {    
+    "rateLimiting": {
+      "rateKey": "CLIENT_IP",
+      "rateInRequestsPerSecond": 1
+      }
+    },
+  "routes": [
+    {
+      "path": "/devices/Temperature",
+      "methods": ["GET"],
+      "backend": {
+        "type": "HTTP_BACKEND",
+        "url": "<ORDS BASE URL>apexuser/devices/Temperature"
+      },
+      "requestPolicies": {}
+    }
+  ]
+}
+```
+
+Edit your deployment and upload your updated JSON file. 
 
 
 
