--- a/Lab301.md
+++ b/Lab301.md
@@ -109,6 +109,41 @@ This JSON shows the syntax to limit API calls to this endpoint to 1 per second, 
 
 Edit your deployment and upload your updated JSON file. 
 
+Now simultaneously have a friend try to hit the endpoint with Postman and you should get a rate limit exceeded message. 
+
+Next, we are going to add another ORDS endpoint. Edit your JSON like so to have a second path. 
+
+```
+{
+  "requestPolicies": {    
+    "rateLimiting": {
+      "rateKey": "CLIENT_IP",
+      "rateInRequestsPerSecond": 1
+      }
+    },
+  "routes": [
+    {
+      "path": "/devices/Temperature",
+      "methods": ["GET"],
+      "backend": {
+        "type": "HTTP_BACKEND",
+        "url": "<ORDS BASE URL>apexuser/devices/Temperature"
+      },
+      "requestPolicies": {}
+    },
+    {
+      "path": "/deviceTimes/times",
+      "methods": ["DELETE"],
+      "backend": {
+        "type": "HTTP_BACKEND",
+        "url": "<ORDS BASE URL>apexuser/deviceTimes/times"
+      },
+      "requestPolicies": {}
+    }    
+  ]
+}
+```
+
 
 
 
