--- a/Lab301.md
+++ b/Lab301.md
@@ -143,6 +143,7 @@ Next, we are going to add another ORDS endpoint. Edit your JSON like so to have 
   ]
 }
 ```
+Since my delete endpoint is wiping the table, it would be wise to [add an authentication scheme](https://docs.cloud.oracle.com/en-us/iaas/Content/APIGateway/Tasks/apigatewayaddingauthzauthn.htm) to prevent malicious users from deleting my table. 
 
 
 
