--- a/Lab301.md
+++ b/Lab301.md
@@ -89,7 +89,7 @@ This JSON shows the syntax to limit API calls to this endpoint to 1 per second, 
 {
   "requestPolicies": {    
     "rateLimiting": {
-      "rateKey": "CLIENT_IP",
+      "rateKey": "TOTAL",
       "rateInRequestsPerSecond": 1
       }
     },
@@ -144,6 +144,8 @@ Next, we are going to add another ORDS endpoint. Edit your JSON like so to have 
 }
 ```
 Since my delete endpoint is wiping the table, it would be wise to [add an authentication scheme](https://docs.cloud.oracle.com/en-us/iaas/Content/APIGateway/Tasks/apigatewayaddingauthzauthn.htm) to prevent malicious users from deleting my table. 
+
+I changed the rateKey for the rateLimited request policy to "CLIENT_IP" to allow multiple users to hit the endpoint, if they do so simulataneously. This still prevents overwhelming the API, while enabling access to multiple users. 
 
 
 
