--- a/Lab301.md
+++ b/Lab301.md
@@ -109,7 +109,14 @@ This JSON shows the syntax to limit API calls to this endpoint to 1 per second, 
 
 Edit your deployment and upload your updated JSON file. 
 
-Now simultaneously have a friend try to hit the endpoint with Postman and you should get a rate limit exceeded message. 
+Now simultaneously have a friend try to hit the endpoint with Postman and you should get a rate limit exceeded message, like below. 
+
+```
+{
+    "message": "Too Many Requests",
+    "code": 429
+}
+```
 
 Next, we are going to add another ORDS endpoint. Edit your JSON like so to have a second path. 
 
