--- a/Lab301.md
+++ b/Lab301.md
@@ -154,6 +154,7 @@ Since my delete endpoint is wiping the table, it would be wise to [add an authen
 
 I changed the rateKey for the rateLimited request policy to "CLIENT_IP" to allow multiple users to hit the endpoint, if they do so simulataneously. This still prevents overwhelming the API, while enabling access to multiple users. 
 
+Proceed to my [next lab to see how you can call a serverless function](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md) via API Gateway.
 
 
 
