--- a/Lab302.md
+++ b/Lab302.md
@@ -10,6 +10,8 @@ If you did the basic hello-world lab listed in the pre-reqs of [my previous lab.
 
 [For more details on functions with API Gateway](https://docs.cloud.oracle.com/en-us/iaas/Content/APIGateway/Tasks/apigatewayusingfunctionsbackend.htm)
 
+[Another person's similar article](https://technology.amis.nl/2020/01/01/oracle-cloud-serverless-functions-unleashed-exposing-oci-functions-through-api-gateway/)
+
 ## Pre-requisites
 
 [You have completed this lab and have a working 'hello world' function.](https://www.oracle.com/webfolder/technetwork/tutorials/infographics/oci_faas_gettingstarted_quickview/functions_quickview_top/functions_quickview/index.html#localdevenv)
