--- a/Lab303.md
+++ b/Lab303.md
@@ -5,31 +5,19 @@ https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm#Bash
 ^ look for example of Python signing requests
 	https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm
 
-https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited
-^ calling ATP
+[https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited](Calling ATP with functions]
 
-https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java
-^vision of what I'm trying to build 
+[https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java](The ew application development stack)
 
-https://www.twilio.com/docs/sms/send-messages
-^Twilio documentation
+[https://www.twilio.com/docs/sms/send-messages](Twilio documentation for function)
 
-https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services
-^use in later ci/cd lab
+[https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services](Modern cloud helping modern business)
 
-https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159
-^ ci/cd for functions, oracle playlist
+[https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159](learn ci/cd for functions,playlist)
 
-https://www.oracle.com/a/ocom/docs/dc/em/george-moykin.pdf
-^slides 
+[https://developer.oracle.com/cloud-native/](OCI and containers)
 
-https://developer.oracle.com/cloud-native/
-^oci and containers
-
-https://orahub.oraclecorp.com/oracle-functions-samples/summary
-^most important internal site to learn functions
-
-https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events
+[https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events](Invoking functions from events) - this will finish architecture from the README
 ^next: invoking functions with cloud events (finishes architecture in beginning of workshop), then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke
 
 cli
