--- a/Lab303.md
+++ b/Lab303.md
@@ -1,9 +1,9 @@
 # Lab 303: Performing an API call with a function via API Gateway
 
-https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm#Bash
-^ add to python code to call OCI API from serverless function
-^ look for example of Python signing requests
-	https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm
+
+[Signing requests with python, bash, and more for OCI API](https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm#Bash)
+
+You can use serverless with the OCI API with proper authentication with signing requests.
 
 [https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited](Calling ATP with functions]
 
@@ -18,6 +18,7 @@ https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm#Bash
 [https://developer.oracle.com/cloud-native/](OCI and containers)
 
 [https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events](Invoking functions from events) - this will finish architecture from the README
+
 ^next: invoking functions with cloud events (finishes architecture in beginning of workshop), then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke
 
 cli
