--- a/Lab303.md
+++ b/Lab303.md
@@ -5,19 +5,20 @@
 
 You can use serverless with the OCI API with proper authentication with signing requests.
 
-[https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited](Calling ATP with functions]
+[Calling ATP with functions](https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited]
 
-[https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java](The ew application development stack)
+[The new application development stack](
+https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java)
 
-[https://www.twilio.com/docs/sms/send-messages](Twilio documentation for function)
+[Twilio documentation for function](https://www.twilio.com/docs/sms/send-messages)
 
-[https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services](Modern cloud helping modern business)
+[Modern cloud helping modern business](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
 
-[https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159](learn ci/cd for functions,playlist)
+[learn ci/cd for functions,playlist](https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159)
 
-[https://developer.oracle.com/cloud-native/](OCI and containers)
+[OCI and containers](https://developer.oracle.com/cloud-native/)
 
-[https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events](Invoking functions from events) - this will finish architecture from the README
+[Invoking functions from events](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events) - this will finish architecture from the README
 
 ^next: invoking functions with cloud events (finishes architecture in beginning of workshop), then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke
 
