--- a/Lab303.md
+++ b/Lab303.md
@@ -1,18 +1,13 @@
 # Lab 303: Performing an API call with a function via API Gateway
 
+## Intro
 
-[Signing requests with python, bash, and more for OCI API](https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm#Bash)
+[Modern cloud helping modern business](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
 
-You can use serverless with the OCI API with proper authentication with signing requests.
 
-[Calling ATP with functions](https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited]
 
 [The new application development stack](
 https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java)
-
-[Twilio documentation for function](https://www.twilio.com/docs/sms/send-messages)
-
-[Modern cloud helping modern business](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
 
 [learn ci/cd for functions,playlist](https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159)
 
@@ -21,6 +16,22 @@ https://blogs.oracle.com/developers/meet-the-new-application-development-stack-k
 [Invoking functions from events](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events) - this will finish architecture from the README
 
 ^next: invoking functions with cloud events (finishes architecture in beginning of workshop), then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke
+
+### Expanding your function usage: 
+
+[Calling ATP with functions](https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited)
+
+This app is an alternative method to call ATP instead of using ORDS like in my previous lab.
+
+[Signing requests with python, bash, and more for OCI API](https://docs.cloud.oracle.com/iaas/Content/API/Concepts/signingrequests.htm#Bash)
+
+You can use serverless with the OCI API with proper authentication with signing requests.
+
+[Twilio documentation for function](https://www.twilio.com/docs/sms/send-messages)
+
+This is the relevant endpoint I used with this lab.
+
+
 
 cli
 ```
