--- a/Lab303.md
+++ b/Lab303.md
@@ -2,9 +2,35 @@
 
 ## Intro
 
-[Modern cloud helping modern business](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
+In this lab you will be performing an API call 
+[to the Twilio text messaging API](https://www.twilio.com/docs/sms/send-messages). The goal of this will be creating the serverless function, invoking it, and then putting it behind an API Gateway.
+
+In the next lab, we will finish the architecture diagram from the README by [invoking a function from an OCI event.](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events)
+
+## Creating the function
+
+To begin with this lab, you can copy the text-func folder in this repo, or it will be created for you by running the first cli command below. The other commands 
+```
+fn init --runtime python text-func
+cd text-func
+```
+After this, you will have to update func.py and requirements to your API credentials, copies of these scripts are at the very bottom of this repo for reference. 
+```
+fn list app
+fn -v deploy --app TwilioText
+fn invoke TwilioText text-func
+```
 
 
+## Invoking the function
+
+## Putting the function behind the gateway
+
+## Calling the function's new endpoint
+
+## Useful links
+
+[Modern cloud & the enterprise](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
 
 [The new application development stack](
 https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java)
@@ -27,20 +53,9 @@ This app is an alternative method to call ATP instead of using ORDS like in my p
 
 You can use serverless with the OCI API with proper authentication with signing requests.
 
-[Twilio documentation for function](https://www.twilio.com/docs/sms/send-messages)
 
-This is the relevant endpoint I used with this lab.
+### Script reference
 
-
-
-cli
-```
-fn init --runtime python text-func
-cd text-func
-fn list app
-fn -v deploy --app TwilioText
-fn invoke TwilioText text-func
-```
 func.py
 ```
 import io
@@ -70,19 +85,11 @@ def apicall():
 apicall()
 
 ```
-
 requirements.txt
 ```
 fdk
 requests
 ```
-
-
-
-
-
-
-
 
 
 
