--- a/Lab303.md
+++ b/Lab303.md
@@ -7,9 +7,9 @@ In this lab you will be performing an API call
 
 In the next lab, we will finish the architecture diagram from the README by [invoking a function from an OCI event.](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events)
 
-## Creating the function
+## Creating & invoking the function
 
-To begin with this lab, you can copy the text-func folder in this repo, or it will be created for you by running the first cli command below. The other commands 
+To begin with this lab, you can copy the text-func folder in this repo, or it will be created for you by running the first cli command below. In the OCI console or via the CLI, you will have to create an application for the function to be deployed to - [see lab 301](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md).
 ```
 fn init --runtime python text-func
 cd text-func
@@ -21,12 +21,7 @@ fn -v deploy --app TwilioText
 fn invoke TwilioText text-func
 ```
 
-
-## Invoking the function
-
-## Putting the function behind the gateway
-
-## Calling the function's new endpoint
+## Putting the function behind the gateway & calling it
 
 ## Useful links
 
