--- a/Lab303.md
+++ b/Lab303.md
@@ -23,6 +23,8 @@ fn invoke TwilioText text-func
 
 ## Putting the function behind the gateway & calling it
 
+[From the OCI documentation](we can get the syntax necessary for the API's json file.
+
 ## Useful links
 
 [Modern cloud & the enterprise](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
