--- a/Lab303.md
+++ b/Lab303.md
@@ -7,6 +7,8 @@ In this lab you will be performing an API call
 
 In the next lab, we will finish the architecture diagram from the README by [invoking a function from an OCI event.](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events)
 
+Next: invoking functions with cloud events (finishes architecture in beginning of workshop), then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke
+
 ## Creating & invoking the function
 
 To begin with this lab, you can copy the text-func folder in this repo, or it will be created for you by running the first cli command below. In the OCI console or via the CLI, you will have to create an application for the function to be deployed to - [see lab 301](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md).
@@ -32,13 +34,10 @@ fn invoke TwilioText text-func
 [The new application development stack](
 https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java)
 
-[learn ci/cd for functions,playlist](https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159)
+[Learn ci/cd for functions, video playlist](https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159)
 
 [OCI and containers](https://developer.oracle.com/cloud-native/)
 
-[Invoking functions from events](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events) - this will finish architecture from the README
-
-^next: invoking functions with cloud events (finishes architecture in beginning of workshop), then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke
 
 ### Expanding your function usage: 
 
