--- a/Lab303.md
+++ b/Lab303.md
@@ -25,7 +25,8 @@ fn invoke TwilioText text-func
 
 ## Putting the function behind the gateway & calling it
 
-[From the OCI documentation](we can get the syntax necessary for the API's json file.
+[From the OCI documentation](https://docs.cloud.oracle.com/en-us/iaas/Content/APIGateway/Tasks/apigatewayusingfunctionsbackend.htm) we can get the syntax necessary for the API's json file.
+
 
 ## Useful links
 
