--- a/Lab303.md
+++ b/Lab303.md
@@ -22,23 +22,13 @@ fn list app
 fn -v deploy --app TwilioText
 fn invoke TwilioText text-func
 ```
+After invoking my function, I have received a serverlessly generated text message.
 
 ## Putting the function behind the gateway & calling it
 
 [From the OCI documentation](https://docs.cloud.oracle.com/en-us/iaas/Content/APIGateway/Tasks/apigatewayusingfunctionsbackend.htm) we can get the syntax necessary for the API's json file.
 
-
 ## Useful links
-
-[Modern cloud & the enterprise](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
-
-[The new application development stack](
-https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java)
-
-[Learn ci/cd for functions, video playlist](https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159)
-
-[OCI and containers](https://developer.oracle.com/cloud-native/)
-
 
 ### Expanding your function usage: 
 
@@ -50,6 +40,15 @@ This app is an alternative method to call ATP instead of using ORDS like in my p
 
 You can use serverless with the OCI API with proper authentication with signing requests.
 
+### Complimenting your functions
+[Modern cloud & the enterprise](https://blogs.oracle.com/cloud-infrastructure/agroscout-improves-development-and-devops-with-oracle-cloud-native-services)
+
+[The new application development stack](
+https://blogs.oracle.com/developers/meet-the-new-application-development-stack-kubernetes-serverless-registry-cicd-java)
+
+[Learn ci/cd for functions, video playlist](https://learn.oracle.com/ols/course/cicd-automation-with-oracle-functions/37192/65159)
+
+[OCI and containers](https://developer.oracle.com/cloud-native/)
 
 ### Script reference
 
