--- a/Lab303.md
+++ b/Lab303.md
@@ -7,7 +7,7 @@ In this lab you will be performing an API call
 
 In the next lab, we will finish the architecture diagram from the README by [invoking a function from an OCI event.](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events)
 
-Next: invoking functions with cloud events (finishes architecture in beginning of workshop), then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke
+Next: then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 = oke, 501 = ci/cd for oke.
 
 ## Creating & invoking the function
 
