--- a/Lab303.md
+++ b/Lab303.md
@@ -50,9 +50,9 @@ https://blogs.oracle.com/developers/meet-the-new-application-development-stack-k
 
 [OCI and containers](https://developer.oracle.com/cloud-native/)
 
-### Script reference
+## Script reference
 
-func.py
+### func.py
 ```
 import io
 import json
@@ -81,7 +81,7 @@ def apicall():
 apicall()
 
 ```
-requirements.txt
+### requirements.txt
 ```
 fdk
 requests
