--- a/Lab303.md
+++ b/Lab303.md
@@ -28,6 +28,25 @@ After invoking my function, I have received a serverlessly generated text messag
 
 [From the OCI documentation](https://docs.cloud.oracle.com/en-us/iaas/Content/APIGateway/Tasks/apigatewayusingfunctionsbackend.htm) we can get the syntax necessary for the API's json file.
 
+My JSON file is below:
+
+```
+{
+  "requestPolicies": {},
+  "routes": [
+    {
+      "path": "/hello",
+      "methods": ["GET"],
+      "backend": {
+        "type": "ORACLE_FUNCTIONS_BACKEND",
+        "functionId": "{YOUR FUNCTION'S OCID}"
+      },
+      "requestPolicies": {}
+    }
+  ]
+}
+```
+
 ## Useful links
 
 ### Expanding your function usage: 
