--- a/Lab303.md
+++ b/Lab303.md
@@ -47,6 +47,10 @@ My JSON file is below:
 }
 ```
 
+To get your function's ocid, navigate to developer services, your application, and then your function. 
+
+![](screenshots/22.png)
+
 ## Useful links
 
 ### Expanding your function usage: 
