--- a/Lab303.md
+++ b/Lab303.md
@@ -51,6 +51,12 @@ To get your function's ocid, navigate to developer services, your application, a
 
 ![](screenshots/22.png)
 
+Then navigate to your gateway, create a new deployment, and upload your JSON file, I named the path prefix '/api' .
+
+![](screenshots/23.png)
+
+Now copy the endpoint from your deployment details page to Postman and add '/hello' to the end. Select the get operation and press send. 
+
 ## Useful links
 
 ### Expanding your function usage: 
