--- a/Lab303.md
+++ b/Lab303.md
@@ -49,13 +49,26 @@ My JSON file is below:
 
 To get your function's ocid, navigate to developer services, your application, and then your function. 
 
-![](screenshots/22.png)
+![](screenshots/24.png)
 
 Then navigate to your gateway, create a new deployment, and upload your JSON file, I named the path prefix '/api' .
 
 ![](screenshots/23.png)
 
 Now copy the endpoint from your deployment details page to Postman and add '/hello' to the end. Select the get operation and press send. 
+
+![](screenshots/25.jpg)
+
+Congratulations, you have just received a text message by invoking a serverless function, protected by API Gateway, that performs an API call to the Twilio text messaging API.
+
+**Note:** this code will give a 500 response and the response below, however the text message is still sent. In a future lab we will discuss how to improve code for functions. 
+
+```
+{
+    "code": "FunctionInvokeExecutionFailed",
+    "message": "function failed"
+}
+```
 
 ## Useful links
 
