--- a/Lab303.md
+++ b/Lab303.md
@@ -11,7 +11,7 @@ Next: then wrap up 300s with ci/cd for functions, 401 = tf, 402 = ansible, 500 =
 
 ## Creating & invoking the function
 
-To begin with this lab, you can copy the text-func folder in this repo, or it will be created for you by running the first cli command below. In the OCI console or via the CLI, you will have to create an application for the function to be deployed to - [see lab 301](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md).
+To begin with this lab, you can copy the text-func folder in this repo, or it will be created for you by running the first cli command below. In the OCI console or via the CLI, you will have to create an application for the function to be deployed to - [see lab 301](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md). The yaml file in the folder is fine as it is, or it can be created with the fn init command below. 
 ```
 fn init --runtime python text-func
 cd text-func
