--- a/Lab100.md
+++ b/Lab100.md
@@ -3,7 +3,7 @@
 
 ![](screenshots/99.png) 
 
-This is the part of the architecture being completed in Lab 100.
+The creation of the event and notification email will be completed in this lab.
 
 ## Create the notifications topic & subscription
 
