--- a/Lab303.md
+++ b/Lab303.md
@@ -5,7 +5,7 @@
 In this lab you will be performing an API call 
 [to the Twilio text messaging API](https://www.twilio.com/docs/sms/send-messages). The goal of this will be creating the serverless function, invoking it, and then putting it behind an API Gateway.
 
-In the next lab, we will finish the architecture diagram from the README by [invoking a function from an OCI event.](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events)
+In this lab, we will finish the architecture diagram from the README by [invoking a function from an OCI event.](https://blogs.oracle.com/developers/oracle-functions-invoking-functions-automatically-with-cloud-events)
 
 ## Creating & invoking the function
 
@@ -67,6 +67,21 @@ Congratulations, you have just received a text message by invoking a serverless 
     "message": "function failed"
 }
 ```
+## Having your OCI event invoke the function
+
+If you did [lab 100](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab100.md) or [lab 200](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab200.md), this part may be self explanatory. 
+
+![](screenshots/30.png) 
+![](screenshots/31.png) 
+Begin by returning to your previously created rule.
+
+![](screenshots/32.png) 
+Add an action. 
+
+![](screenshots/33.png) 
+Input your function's details. 
+
+Congratulations, now upon successful object creation you will receive an email, a text message, and a message will be added to your stream. 
 
 ## Useful links
 
