--- a/Lab302.md
+++ b/Lab302.md
@@ -59,7 +59,7 @@ After your deployment is created, copy the endpoing like in the last lab, and ad
 
 Congratulations, you have just invoked a serverless function via the API Gateway!
 
-Proceed to lab [lab 303](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md) to see how you can use functions to perform API calls with the [Python requests library](https://requests.readthedocs.io/en/master/). 
+Proceed to [lab 303](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md) to see how you can use functions to perform API calls with the [Python requests library](https://requests.readthedocs.io/en/master/). 
 
 
 
