--- a/Lab301.md
+++ b/Lab301.md
@@ -1,5 +1,7 @@
 # Lab 301: Using API Gateway with an already existing API
 
+![](301screenshots/55.jpg) 
+
 ## Introduction
 
 In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway because I would like to apply a rate-limiting policy. 
