--- a/Lab301.md
+++ b/Lab301.md
@@ -1,6 +1,7 @@
 # Lab 301: Using API Gateway with an already existing API
 
-![](301screenshots/55.jpg) 
+![](301screenshots/55.jpg)
+[Source](http://www.commitstrip.com/en/2018/03/01/interns-and-apis/)
 
 ## Introduction
 
