--- a/Lab301.md
+++ b/Lab301.md
@@ -7,8 +7,6 @@
 
 In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway because I would like to apply a rate-limiting policy. 
 
-[Deploying a flask api on API Gateway](https://github.com/stretchcloud/OCI-APIGW-Demo-API)
-
 ## Pre-requisites
 
 You have an already existing API endpoint, preferably no auth required, and it's an ORDS endpoint. 
@@ -157,7 +155,10 @@ Since my delete endpoint is wiping the table, it would be wise to [add an authen
 
 I changed the rateKey for the rateLimited request policy to "CLIENT_IP" to allow multiple users to hit the endpoint, if they do so simulataneously. This still prevents overwhelming the API, while enabling access to multiple users. 
 
+## Conclusion 
 An alternative to the architecture of this lab would be [directly invoking the ATP database](https://blogs.oracle.com/developers/oracle-functions-connecting-to-an-atp-database-revisited), instead of calling an ORDS endpoint. This can be done with API Gateway + serverless functions. 
+
+This repo can elaborate on [deploying a flask api on API Gateway](https://github.com/stretchcloud/OCI-APIGW-Demo-API).
 
 Proceed to my [next lab to see how you can call a serverless function](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md) via API Gateway.
 
