--- a/Lab301.md
+++ b/Lab301.md
@@ -160,6 +160,8 @@ An alternative to the architecture of this lab would be [directly invoking the A
 
 This repo can elaborate on [deploying a flask api on API Gateway](https://github.com/stretchcloud/OCI-APIGW-Demo-API).
 
+If you have hundreds of APIs, don't create all of them via the console - [use terraform](https://www.terraform.io/docs/providers/oci/r/apigateway_gateway.html).
+
 Proceed to my [next lab to see how you can call a serverless function](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab302.md) via API Gateway.
 
 
