--- a/Lab301.md
+++ b/Lab301.md
@@ -5,7 +5,7 @@
 
 ## Introduction
 
-In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway because I would like to apply a rate-limiting policy. Best of all, it costs less than the [price of a cup of coffee](https://www.oracle.com/cloud/cloud-native/api-gateway/).
+In this lab I will be putting my ORDS endpoint [from my previous lab](https://github.com/GaryHostt/sampeIoTData) behind an API Gateway because I would like to apply a rate-limiting policy. Best of all, 1 million API calls to the gateway costs less than the [price of a cup of coffee](https://www.oracle.com/cloud/cloud-native/api-gateway/).
 
 ## Pre-requisites
 
