--- a/Lab303.md
+++ b/Lab303.md
@@ -105,6 +105,8 @@ https://blogs.oracle.com/developers/meet-the-new-application-development-stack-k
 
 [OCI and containers](https://developer.oracle.com/cloud-native/)
 
+[Using Key Management Services with functions](https://www.ateam-oracle.com/secure-storage-of-confidential-configuration-data-in-oracle-functions-using-oracle-oci-key-management-services)
+
 ## Script reference
 
 ### func.py
