--- a/304.md
+++ b/304.md
@@ -2,12 +2,15 @@
 
 ## Intro
 
-Because [lab303](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md) relies upon an external API you may not have time to configure, this lab will use an Apiary endpoint which is free and a little easier to setup. The code in the function will also show you how to create more generic REST payloads for functions. 
+Because [lab 303](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md) relies upon an external API you may not have time to configure, this lab will use an Apiary endpoint which is free and a little easier to setup. The code in the function will also show you how to create more generic REST payloads for functions. 
 
 ....
-begin by creating app
+Begin by creating an application in the cloud console. 
 
-100 - 101
+
+![](screenshotslab200/100.png) 
+
+![](screenshotslab200/101.png) 
 
 ```
 fn init --runtime python submit-func
@@ -26,14 +29,15 @@ fn -v deploy --app genericAPIcall
 
 After deploying, return to the cloud console to create the function. 
 
-102 - 104
+![](screenshotslab200/102.png) 
 
-
+![](screenshotslab200/104.png) 
 
 ## Apiary
 
-71 - 72
+![](screenshotslab200/71.png) 
 
+![](screenshotslab200/72.png) 
 ## running it 
 
 test from CLI:
