--- a/304.md
+++ b/304.md
@@ -7,50 +7,63 @@ Because [lab 303](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md)
 ....
 Begin by creating an application in the cloud console. 
 
-
 ![](screenshotslab200/100.png) 
 
 ![](screenshotslab200/101.png) 
+
+After creating your application, you can initialize your fn function.
 
 ```
 fn init --runtime python submit-func
 cd submit-func
 ```
-replace the code in func.py with the submit.py code
-change requirements.txt to
+Replace the code in func.py with the submit.py code. 
+
+
+![](screenshotslab200/71.png) 
+
+You can get your Apiary endpoint from this location, after copying the blue print at the bottom of this lab. 
+
+Then update requirements.txt to:
 ```
 fdk
 requests
 ```
-
+After doing that, you can deploy the function to your application.
 ```
 fn -v deploy --app genericAPIcall
 ```
-
 After deploying, return to the cloud console to create the function. 
 
 ![](screenshotslab200/102.png) 
 
+Select the function uploaded to your repo.
+
 ![](screenshotslab200/104.png) 
 
-## Apiary
-
-![](screenshotslab200/71.png) 
-
-![](screenshotslab200/72.png) 
-## running it 
-
-test from CLI:
+You can now test the function from your CLI by running:
 
 ```
 fn invoke genericAPIcall submit-funcc
 ```
+The console may print, however the function may have still worked. 
 
-see apiary log
+```
+Error invoking function. status: 502 message: function failed
+```
 
-105
+## Apiary
 
-## behind APIg
+Next, you can login to Apiary, go to the inspector tab and see the log for your API call.
+
+
+![](screenshotslab200/105.png) 
+
+We can see our endpoint successfully received the API call
+
+## Behind API Gateway
+
+Next we can [put the function behind the gateway & call it](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md). 
 
 # References 
 
@@ -98,6 +111,8 @@ This is a simple API allowing the receiving of a payload from events.
 ```
 
 ### func.py 
+
+You need to replace <APIARY ENDPOINT> with your own.
 ```
 import json
 import requests
