--- a/304.md
+++ b/304.md
@@ -4,6 +4,10 @@
 
 Because [lab 303](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md) relies upon an external API you may not have time to configure, this lab will use an Apiary endpoint which is free and a little easier to setup. The code in the function will also show you how to create more generic REST payloads for functions. 
 
+This lab requires you to have an [apiary account](https://apiary.io/). You should begin this lab by creating a new API project on apiary and then replacing the standard blueprint with my API blueprint at the bottom of this page.
+
+## Workshop
+
 Begin by creating an application in the cloud console. 
 
 ![](screenshotslab200/100.png) 
@@ -17,7 +21,6 @@ fn init --runtime python submit-func
 cd submit-func
 ```
 Replace the code in func.py with the submit.py code. 
-
 
 ![](screenshotslab200/71.png) 
 
@@ -55,7 +58,6 @@ Error invoking function. status: 502 message: function failed
 
 Next, you can login to Apiary, go to the inspector tab and see the log for your API call.
 
-
 ![](screenshotslab200/105.png) 
 
 We can see our endpoint successfully received the API call
@@ -66,7 +68,7 @@ Next we can [put the function behind the gateway & call it](https://github.com/G
 
 # References 
 
-### Apiary blueprint
+## Apiary blueprint
 
 ```
 FORMAT: 1A
@@ -109,7 +111,7 @@ This is a simple API allowing the receiving of a payload from events.
 
 ```
 
-### func.py 
+## func.py 
 
 You need to replace <APIARY ENDPOINT> with your own.
 ```
