--- a/304.md
+++ b/304.md
@@ -1,5 +1,8 @@
 # Lab 304: Function calling an Apiary endpoint
 
+
+![](300screenshots/download.jpg) 
+
 ## Intro
 
 Because [lab 303](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab303.md) relies upon an external API you may not have time to configure, this lab will use an Apiary endpoint which is free and a little easier to setup. The code in the function will also show you how to create more generic REST payloads for functions. 
