--- a/304.md
+++ b/304.md
@@ -1,7 +1,7 @@
 # Lab 304: Function calling an Apiary endpoint
 
 
-![](300screenshots/download.jpg) 
+![](300screenshots/download.jpeg) 
 
 ## Intro
 
