--- a/304.md
+++ b/304.md
@@ -1,7 +1,8 @@
 # Lab 304: Function calling an Apiary endpoint
 
-
-![](300screenshots/download.jpeg) 
+<p align="center">
+  <img src="https://github.com/GaryHostt/OCI_DevOps/blob/master/300screenshots/download2.png?raw=true" alt="Apiary"/>
+</p>
 
 ## Intro
 
