--- a/Lab301.md
+++ b/Lab301.md
@@ -1,6 +1,9 @@
 # Lab 301: Using API Gateway with an already existing API
 
-![](301screenshots/55.jpg)
+<p align="center">
+  <img src="https://github.com/GaryHostt/OCI_DevOps/blob/master/301screenshots/55.jpg?raw=true" alt="ODI"/>
+</p>
+
 [Source](http://www.commitstrip.com/en/2018/03/01/interns-and-apis/)
 
 ## Introduction
