--- a/Lab400.md
+++ b/Lab400.md
@@ -14,6 +14,8 @@ Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a
 
 [What is the point of a service provider's kubernetes engine over open source management?](https://cloud.google.com/kubernetes-engine/kubernetes-comic)
 
+[MuShop - A cloud-native reference app for Oracle Cloud](https://blogs.oracle.com/developers/mushop-a-cloud-native-reference-app-for-oracle-cloud)
+
 [Running Jenkins on OKE](https://blogs.oracle.com/cloud-infrastructure/cicd-on-steroids:-announcing-container-engine-for-kubernetes-as-a-jenkins-x-provider)
 
 [OKE Product page](https://www.oracle.com/cloud/compute/container-engine-kubernetes.html)
