--- a/Lab400.md
+++ b/Lab400.md
@@ -1,6 +1,8 @@
 # Lab 400: Oracle Kubernetes Engine - OKE
 
-![](screenshots/81.png)
+<p align="center">
+  <img src="https://github.com/GaryHostt/OCI_DevOps/blob/master/screenshots/81.png?raw=true" alt="OKE"/>
+</p>
 
 ## Introduction
 
