--- a/Lab400.md
+++ b/Lab400.md
@@ -18,6 +18,8 @@ Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a
 
 [MuShop - A cloud-native reference app for Oracle Cloud](https://blogs.oracle.com/developers/mushop-a-cloud-native-reference-app-for-oracle-cloud)
 
+[Rapid start kubernetes on OCI - with terraform!](https://github.com/oracle/terraform-kubernetes-installer)
+
 [Running Jenkins on OKE](https://blogs.oracle.com/cloud-infrastructure/cicd-on-steroids:-announcing-container-engine-for-kubernetes-as-a-jenkins-x-provider)
 
 [OKE Product page](https://www.oracle.com/cloud/compute/container-engine-kubernetes.html)
