--- a/Lab400.md
+++ b/Lab400.md
@@ -1,4 +1,4 @@
-# Lab 400: Oracle Kubernetes Engine - OKE
+# Lab 400: Kubernetes & OCI
 
 <p align="center">
   <img src="https://github.com/GaryHostt/OCI_DevOps/blob/master/screenshots/81.png?raw=true" alt="OKE"/>
@@ -8,7 +8,9 @@
 
 Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a.md), this is just a collection of pre-requisites and resources. In lab401 we will be building on this knowledge.
 
-[Best place to start](https://oracle.github.io/learning-library/workshops/container-native-development/)
+You can manage kubernetes yourself on OCI, use the [pre-built kubernetes installer](https://github.com/oracle/terraform-kubernetes-installer), or use the enterprise class managed service Oracle Kubernetes Engine, OKE.
+
+[Best place to start with OKE](https://oracle.github.io/learning-library/workshops/container-native-development/)
 
 [OKE API](https://docs.cloud.oracle.com/en-us/iaas/api/#/en/containerengine/20180222/)
 
@@ -17,8 +19,6 @@ Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a
 [What is the point of a service provider's kubernetes engine over open source management?](https://cloud.google.com/kubernetes-engine/kubernetes-comic)
 
 [MuShop - A cloud-native reference app for Oracle Cloud](https://blogs.oracle.com/developers/mushop-a-cloud-native-reference-app-for-oracle-cloud)
-
-[Rapid start kubernetes on OCI - with terraform!](https://github.com/oracle/terraform-kubernetes-installer)
 
 [Running Jenkins on OKE](https://blogs.oracle.com/cloud-infrastructure/cicd-on-steroids:-announcing-container-engine-for-kubernetes-as-a-jenkins-x-provider)
 
