--- a/Lab400.md
+++ b/Lab400.md
@@ -10,6 +10,8 @@ Similar to [lab 300](https://github.com/GaryHostt/OCI_DevOps/blob/master/Lab300a
 
 You can manage kubernetes yourself on OCI, use the [pre-built kubernetes installer](https://github.com/oracle/terraform-kubernetes-installer), or use the enterprise class managed service Oracle Kubernetes Engine, OKE.
 
+OKE enables quick deployment of containers, combines open Kubernetes, with the control, security, IAM, and predictable performance of OCI.
+
 [Best place to start with OKE](https://oracle.github.io/learning-library/workshops/container-native-development/)
 
 [OKE API](https://docs.cloud.oracle.com/en-us/iaas/api/#/en/containerengine/20180222/)
